Changed code style Updated ModBaseProcessor API Added DefaultTypeIOHandler Moved ByteWrites & ByteReads in ArcLibrary Added StringTemplate for AP Cleanup