@@ -1,29 +1,18 @@
+//file:noinspection DependencyNotationArgument
 import java.time.format.DateTimeFormatter
 
 buildscript{
     ext{
-//        arcHash = 'v135'
-
-
-        // v7
-        mindustryPath = "com.github.Anuken.Mindustry"
-//        mindustryPath = "com.github.Anuken.Mindustry"
-        mindustryVersionFull = 'v145.1'
-        mindustryVersion = 'v145.1'//10
-        arcVersion = mindustryVersion
-//        arcVersion = "916c5a77"
-
-
-        // normal
-        //mindustryPath = "com.github.Anuken.Mindustry"
-        //mindustryVersion = 'v135'
-        //arcVersion=mindustryVersion
-
         jgitVersion = "3.5.0.201409260305-r"
 
         jabelVersion = "0.6.0"
 
         jparcerVersion = "3.22.1"
+        arcLibModule = { String name ->
+            //skip to last submodule
+            if(name.contains(':')) name = name.split(':').last()
+            return "com.github.Zelaux.ArcLibrary:$name:$arcLibraryVersion"
+        }
         arcModule = { String name ->
             //skip to last submodule
             if(name.contains(':')) name = name.split(':').last()
@@ -32,7 +21,7 @@ buildscript{
         mindustryModule = { String name ->
             //skip to last submodule
             if(name.contains(':')) name = name.split(':').last()
-            return "$mindustryPath:$name:$mindustryVersion"
+            return "com.github.Anuken.Mindustry:$name:$mindustryVersion"
         }
     }
     repositories{
@@ -41,12 +30,13 @@ buildscript{
         google()
         maven{ url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven{ url 'https://jitpack.io' }
-        maven { url 'https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository' }
+        maven{ url 'https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository' }
+        maven{ url  'https://raw.githubusercontent.com/Zelaux/Repo/master/repository' }
     }
     dependencies{
-        classpath "$mindustryPath:core:$mindustryVersion"
-        classpath "com.github.Anuken.Arc:arc-core:$arcVersion"
-        classpath "com.github.Anuken.Arc:packer:$arcVersion"
+        classpath mindustryModule("core")
+        classpath arcModule("arc-core")
+        classpath arcModule("packer")
     }
 }
 
@@ -91,7 +81,8 @@ allprojects{
         maven{ url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven{ url "https://oss.sonatype.org/content/repositories/releases/" }
         maven{ url 'https://jitpack.io' }
-        maven { url 'https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository' }
+        maven{ url 'https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository' }
+        maven{ url  'https://raw.githubusercontent.com/Zelaux/Repo/master/repository' }
     }
 
     dependencies{
@@ -112,13 +103,14 @@ allprojects{
                 '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
                 '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
                 '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
                 '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
         ])
     }
     jar{
         duplicatesStrategy = DuplicatesStrategy.EXCLUDE
         from{
-            configurations.runtimeClasspath.collect{it.isDirectory() ? it : zipTree(it)}
+            configurations.runtimeClasspath.collect{ it.isDirectory() ? it : zipTree(it) }
 //        project(":core").fileTree("build/libs/core.jar").collect { it.isDirectory() ? it : zipTree(it) }
         }
     }
@@ -205,7 +197,7 @@ project(":core"){
 //            println "sub adding "+sub.getName()
             String name = sub.getName();
             println "subproject: " + sub.getName()
-            if(!["tools", "annotations", "localAnnotations", "plugins", "blocks","customBlockShape", "tiledStructures", "tests", "utils", project.getName()].contains(name)){
+            if(!["tools", "annotations", "localAnnotations", "plugins", "blocks", "customBlockShape", "tiledStructures", "tests", "utils", project.getName()].contains(name)){
                 println "implemented"
                 implementation sub
             }
@@ -244,64 +236,7 @@ project(":core"){
 }
 
 project(":tests"){
-    apply plugin: "java"
-    apply plugin: "java-library"
-    apply plugin: "kotlin"
-    apply plugin: "kotlin-kapt"
 
-    kapt{
-        javacOptions{
-            option("-source", "16")
-            option("-target", "1.8")
-        }
-    }
-    compileJava.options.fork = true
-
-    dependencies{
-        implementation project(":core")
-        implementation project(":blocks")
-        implementation project(":customBlockShape")
-        implementation project(":tiledStructures")
-        implementation project(":graphics")
-        compileOnly arcModule('arc-core')
-        compileOnly mindustryModule('core')
-        compileOnly mindustryModule('server')
-
-
-        testImplementation project(":core")
-        testImplementation project(":blocks")
-        testImplementation project(":customBlockShape")
-        testImplementation project(":tiledStructures")
-
-        testImplementation arcModule('arc-core')
-        testImplementation mindustryModule('core')
-        testImplementation mindustryModule('server')
-
-        testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.1"
-        testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.1"
-        testImplementation arcModule("backends:backend-headless")
-        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
-
-
-        annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
-        compileOnly project(":annotations")
-        kapt project(":annotations")
-
-//        testImplementation "com.github.Zelaux.ZelauxModCore:core:$modCoreVersion"
-//        testImplementation "com.github.Zelaux.ZelauxModCore:plugins:$modCoreVersion"
-//        compileOnly "com.github.Zelaux.ZelauxModCore:annotations:$modCoreVersion"
-    }
-
-    test{
-        //fork every test so mods don't interact with each other
-        forkEvery = 1
-        useJUnitPlatform()
-//        workingDir = new File("../core/assets")
-        testLogging{
-            exceptionFormat = 'full'
-            showStandardStreams = true
-        }
-    }
 }
 project(":tools"){
     apply plugin: "java"
